LiteralLinq/Expression/Compiler/Where/WhereTokenParser.cs

/* #line 1 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.rl" */
﻿
/* #line 152 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.rl" */


using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace LiteralLinq.Expression.Compiler.Where
{
    public class WhereTokenParser
    {
       
/* #line 13 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.cs" */
static readonly short[] _TestParser_to_state_actions =  new short [] {
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 81, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0
};

static readonly short[] _TestParser_from_state_actions =  new short [] {
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 82, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0
};

const int TestParser_start = 533;
const int TestParser_first_final = 533;
const int TestParser_error = 0;

const int TestParser_en_main = 533;


/* #line 164 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.rl" */
       public IEnumerable<WhereToken> Parse(string expression)
       {
       		TokenParseBuffer buffer = new TokenParseBuffer();
       		
       		Stack<WhereToken> stackA=new Stack<WhereToken>();
       		Stack<WhereToken> stackB=new Stack<WhereToken>();

       		Queue<Token> temp=null;

       		string data=expression;
       	    int p=0,pe=data.Length,cs=0,eof=data.Length,ts=0,te=0,act=0;
        	
/* #line 212 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.cs" */
	{
	cs = TestParser_start;
	ts = -1;
	te = -1;
	act = 0;
	}

/* #line 176 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.rl" */
        	
/* #line 218 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.cs" */
	{
	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( _TestParser_from_state_actions[cs] ) {
	case 82:
/* #line 1 "NONE" */
	{ts = p;}
	break;
/* #line 228 "D:/workplace/LiteralLinq/LiteralLinq/Expression/Compiler/Where/WhereTokenParser.cs" */
		default: break;
	}

	switch ( cs ) {
case 533:
	switch( data[p] ) {
		case '\u0020': goto tr1005;
		case '\u0028': goto tr1006;
		case '\u002c': goto tr1007;
		case '\u0049': goto tr1008;
		case '\u0069': goto tr1008;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1005;
	goto tr1;
case 0:
	goto _out;
case 1:
	switch( data[p] ) {
		case '\u0049': goto tr0;
		case '\u0069': goto tr0;
		default: break;
	}
	goto tr1;
case 2:
	switch( data[p] ) {
		case '\u0054': goto tr2;
		case '\u0074': goto tr2;
		default: break;
	}
	goto tr1;
case 3:
	switch( data[p] ) {
		case '\u0020': goto tr3;
		case '\u002e': goto tr4;
		case '\u003c': goto tr5;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr3;
	goto tr1;
case 4:
	switch( data[p] ) {
		case '\u0020': goto tr6;
		case '\u003c': goto tr7;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr6;
	goto tr1;
case 5:
	if ( data[p] == 61u )
		goto tr8;
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr8;
	} else
		goto tr8;
	goto tr1;
case 6:
	if ( data[p] == 62u )
		goto tr9;
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr8;
	} else
		goto tr8;
	goto tr1;
case 7:
	switch( data[p] ) {
		case '\u0020': goto tr10;
		case '\u0027': goto tr11;
		case '\u004e': goto tr12;
		case '\u005b': goto tr13;
		case '\u006e': goto tr12;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr10;
	goto tr1;
case 8:
	switch( data[p] ) {
		case '\u0027': goto tr16;
		case '\u005c': goto tr17;
		default: break;
	}
	goto tr15;
case 534:
	switch( data[p] ) {
		case '\u0020': goto tr1010;
		case '\u0029': goto tr1011;
		case '\u003c': goto tr1012;
		case '\u0040': goto tr1013;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1010;
	goto tr1009;
case 9:
	switch( data[p] ) {
		case '\u0020': goto tr19;
		case '\u003c': goto tr20;
		case '\u0040': goto tr21;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr19;
	goto tr18;
case 10:
	if ( data[p] == 61u )
		goto tr22;
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr22;
	} else
		goto tr22;
	goto tr18;
case 11:
	if ( data[p] == 62u )
		goto tr23;
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr22;
	} else
		goto tr22;
	goto tr18;
case 12:
	switch( data[p] ) {
		case '\u0020': goto tr24;
		case '\u0028': goto tr25;
		case '\u0049': goto tr26;
		case '\u0069': goto tr26;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr24;
	goto tr18;
case 13:
	switch( data[p] ) {
		case '\u0049': goto tr27;
		case '\u0069': goto tr27;
		default: break;
	}
	goto tr18;
case 14:
	switch( data[p] ) {
		case '\u0054': goto tr28;
		case '\u0074': goto tr28;
		default: break;
	}
	goto tr18;
case 15:
	switch( data[p] ) {
		case '\u0020': goto tr29;
		case '\u002e': goto tr30;
		case '\u003c': goto tr31;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr29;
	goto tr18;
case 16:
	switch( data[p] ) {
		case '\u0020': goto tr32;
		case '\u003c': goto tr33;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr32;
	goto tr18;
case 17:
	if ( data[p] == 61u )
		goto tr34;
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr34;
	} else
		goto tr34;
	goto tr18;
case 18:
	if ( data[p] == 62u )
		goto tr35;
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr34;
	} else
		goto tr34;
	goto tr18;
case 19:
	switch( data[p] ) {
		case '\u0020': goto tr36;
		case '\u0027': goto tr37;
		case '\u004e': goto tr38;
		case '\u005b': goto tr39;
		case '\u006e': goto tr38;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr36;
	goto tr18;
case 20:
	switch( data[p] ) {
		case '\u0027': goto tr41;
		case '\u005c': goto tr42;
		default: break;
	}
	goto tr40;
case 535:
	switch( data[p] ) {
		case '\u0020': goto tr1014;
		case '\u0029': goto tr1011;
		case '\u003c': goto tr1012;
		case '\u0040': goto tr1015;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1014;
	goto tr1009;
case 21:
	switch( data[p] ) {
		case '\u0020': goto tr43;
		case '\u003c': goto tr20;
		case '\u0040': goto tr44;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr43;
	goto tr18;
case 22:
	switch( data[p] ) {
		case '\u0020': goto tr45;
		case '\u0027': goto tr46;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr45;
	goto tr18;
case 23:
	switch( data[p] ) {
		case '\u0027': goto tr48;
		case '\u005c': goto tr49;
		default: break;
	}
	goto tr47;
case 536:
	switch( data[p] ) {
		case '\u0020': goto tr1017;
		case '\u0029': goto tr1018;
		case '\u003c': goto tr1019;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1017;
	goto tr1016;
case 24:
	switch( data[p] ) {
		case '\u0020': goto tr50;
		case '\u003c': goto tr20;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr50;
	goto tr18;
case 537:
	switch( data[p] ) {
		case '\u0020': goto tr1021;
		case '\u003c': goto tr1022;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1021;
	goto tr1020;
case 25:
	switch( data[p] ) {
		case '\u0027': goto tr51;
		case '\u005c': goto tr49;
		default: break;
	}
	goto tr47;
case 538:
	switch( data[p] ) {
		case '\u0020': goto tr1023;
		case '\u0027': goto tr48;
		case '\u0029': goto tr1024;
		case '\u003c': goto tr1025;
		case '\u005c': goto tr49;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1023;
	goto tr47;
case 26:
	switch( data[p] ) {
		case '\u0020': goto tr52;
		case '\u0027': goto tr48;
		case '\u003c': goto tr53;
		case '\u005c': goto tr49;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr52;
	goto tr47;
case 27:
	switch( data[p] ) {
		case '\u0027': goto tr55;
		case '\u003d': goto tr54;
		case '\u005c': goto tr56;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr54;
	} else
		goto tr54;
	goto tr47;
case 28:
	switch( data[p] ) {
		case '\u0027': goto tr55;
		case '\u003e': goto tr57;
		case '\u005c': goto tr56;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr54;
	} else
		goto tr54;
	goto tr47;
case 539:
	switch( data[p] ) {
		case '\u0020': goto tr1026;
		case '\u0029': goto tr1027;
		case '\u003c': goto tr1019;
		case '\u003e': goto tr23;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr22;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr22;
	} else
		goto tr1026;
	goto tr1016;
case 29:
	switch( data[p] ) {
		case '\u0020': goto tr58;
		case '\u003c': goto tr20;
		case '\u003e': goto tr23;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr22;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr22;
	} else
		goto tr58;
	goto tr18;
case 540:
	switch( data[p] ) {
		case '\u0020': goto tr1028;
		case '\u003c': goto tr1022;
		case '\u003e': goto tr23;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr22;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr22;
	} else
		goto tr1028;
	goto tr1020;
case 30:
	switch( data[p] ) {
		case '\u0020': goto tr59;
		case '\u0027': goto tr48;
		case '\u0028': goto tr60;
		case '\u0049': goto tr61;
		case '\u005c': goto tr49;
		case '\u0069': goto tr61;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr59;
	goto tr47;
case 31:
	switch( data[p] ) {
		case '\u0027': goto tr48;
		case '\u0049': goto tr62;
		case '\u005c': goto tr49;
		case '\u0069': goto tr62;
		default: break;
	}
	goto tr47;
case 32:
	switch( data[p] ) {
		case '\u0027': goto tr48;
		case '\u0054': goto tr63;
		case '\u005c': goto tr49;
		case '\u0074': goto tr63;
		default: break;
	}
	goto tr47;
case 33:
	switch( data[p] ) {
		case '\u0020': goto tr64;
		case '\u0027': goto tr48;
		case '\u002e': goto tr65;
		case '\u003c': goto tr66;
		case '\u005c': goto tr49;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr64;
	goto tr47;
case 34:
	switch( data[p] ) {
		case '\u0020': goto tr67;
		case '\u0027': goto tr48;
		case '\u003c': goto tr68;
		case '\u005c': goto tr49;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr67;
	goto tr47;
case 35:
	switch( data[p] ) {
		case '\u0027': goto tr70;
		case '\u003d': goto tr69;
		case '\u005c': goto tr71;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr69;
	} else
		goto tr69;
	goto tr47;
case 36:
	switch( data[p] ) {
		case '\u0027': goto tr70;
		case '\u003e': goto tr72;
		case '\u005c': goto tr71;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr69;
	} else
		goto tr69;
	goto tr47;
case 541:
	switch( data[p] ) {
		case '\u0020': goto tr1029;
		case '\u0029': goto tr1030;
		case '\u003c': goto tr1019;
		case '\u003e': goto tr35;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr34;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr34;
	} else
		goto tr1029;
	goto tr1016;
case 37:
	switch( data[p] ) {
		case '\u0020': goto tr73;
		case '\u003c': goto tr20;
		case '\u003e': goto tr35;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr34;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr34;
	} else
		goto tr73;
	goto tr18;
case 542:
	switch( data[p] ) {
		case '\u0020': goto tr1031;
		case '\u003c': goto tr1022;
		case '\u003e': goto tr35;
		default: break;
	}
	if ( data[p] < 9u ) {
		if ( data[p] <= 8u )
			goto tr34;
	} else if ( data[p] > 13u ) {
		if ( 14u <= data[p] && data[p] <= 127u )
			goto tr34;
	} else
		goto tr1031;
	goto tr1020;
case 38:
	switch( data[p] ) {
		case '\u0020': goto tr74;
		case '\u0027': goto tr75;
		case '\u004e': goto tr76;
		case '\u005b': goto tr77;
		case '\u005c': goto tr49;
		case '\u006e': goto tr76;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr74;
	goto tr47;
case 543:
	switch( data[p] ) {
		case '\u0020': goto tr1032;
		case '\u0027': goto tr41;
		case '\u0029': goto tr1033;
		case '\u003c': goto tr1034;
		case '\u005c': goto tr42;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr1032;
	goto tr40;
case 39:
	switch( data[p] ) {
		case '\u0020': goto tr78;
		case '\u0027': goto tr41;
		case '\u003c': goto tr79;
		case '\u005c': goto tr42;
		default: break;
	}
	if ( 9u <= data[p] && data[p] <= 13u )
		goto tr78;
	goto tr40;
case 40:
	switch( data[p] ) {
		case '\u0027': goto tr81;
		case '\u003d': goto tr80;
		case '\u005c': goto tr82;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 63u <= data[p] && data[p] <= 127u )
			goto tr80;
	} else
		goto tr80;
	goto tr40;
case 41:
	switch( data[p] ) {
		case '\u0027': goto tr81;
		case '\u003e': goto tr83;
		case '\u005c': goto tr82;
		default: break;
	}
	if ( data[p] > 59u ) {
		if ( 61u <= data[p] && data[p] <= 127u )
			goto tr80;
	} else
		goto tr80;
	goto tr40;
case 544:
	switch( data[p] ) {
		case '\u0020': goto tr1035;
		case '\u0029': goto tr1036;
		case '\u003c': goto tr1012;
